tests/kyverno-policies/add-account/test-paas-mutated.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas
  namespace: paas
  labels:
    account: test
spec:
  containers:
    - name: nginx
      image: nginx:latest
