tests/kyverno-policies/add-account/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-account
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: add-account
    rule: paas-add-account
    resources:
      - test-paas
    patchedResources: test-paas-mutated.yaml
    kind: Pod
    result: pass
  - policy: add-account
    rule: paas-add-account
    resources:
      - test-skip
    kind: Pod
    result: skip
